# Xerith

./: .gitignore  CMakeLists.txt  LICENSE  ORDER.md  README.md  test.xrth
src/: main.cpp
src/errors/: diagnostics.cpp  diagnostics.h  error.cpp  error.h
src/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
src/parser/: ast.cpp  ast.h  ast_printer.cpp  ast_printer.h  parser.cpp  parser.h  precedence.h
src/runtime/: environment.cpp  environment.h  interpreter.cpp  interpreter.h
src/utils/: arena.cpp  arena.h  logging.cpp  logging.h  span.h
